--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scripts/leaflet.css">
     <script src="scripts/leaflet.js"></script>
+	<link rel="stylesheet" href="scripts/L.Control.BetterScale.css" />
+	<script src="scripts/L.Control.BetterScale.js"></script>
   </head>
   
   <body style="height: 100%;margin: 0;">
     <div id="map" style="width: 100%; height: 100%; background: #000000;"></div>
     <script type="text/javascript">
+
   //Creating the Map
     var map = L.map('map').setView([0, 0], 0);
     L.tileLayer('map/{z}/{x}/{y}.png', {
       continuousWorld: false,
       noWrap: true,  
-      minZoom: 3,
+      minZoom: 4,
       maxZoom: 5,
     }).addTo(map);
 
@@ -42,6 +45,7 @@
 	});
 
   //Coordinate Finder
+/*
     var marker = L.marker([0, 0], {
       draggable: true,
     }).addTo(map);
@@ -49,12 +53,14 @@
     marker.on('dragend', function(e) {
       marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
     });
+*/
 
-
-  //Markers
 
 var vile_thicket = L.marker([32.546813, -52.294922], {icon: cityDruid}).bindPopup('<a href="https://edmundgelting.github.io/the-wiki/2.-The-Races/4.-The-Venthalyr"><b> The Thicket - Venthalyri Satelite Forest</b>').addTo(map);
 var vile_smoke = L.marker([-4.740675, -72.246094], {icon: cityDwarves}).bindPopup('<a href="https://edmundgelting.github.io/the-wiki/2.-The-Races/3.-The-Markhalyr"><b> The Tower of Smoke - Markhalyri Stronghold </b>').addTo(map);
+
+L.control.scale({metric: false, maxWidth: 250}).addTo(map);
+
     </script>
   </body>
 </html>
