--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     L.tileLayer('map/{z}/{x}/{y}.png', {
       continuousWorld: false,
       noWrap: true,  
-      minZoom: 4,
+      minZoom: 3,
       maxZoom: 5,
     }).addTo(map);
 
@@ -45,7 +45,6 @@
 	});
 
   //Coordinate Finder
-/*
     var marker = L.marker([0, 0], {
       draggable: true,
     }).addTo(map);
@@ -53,13 +52,12 @@
     marker.on('dragend', function(e) {
       marker.getPopup().setContent(marker.getLatLng().toString()).openOn(map);
     });
-*/
 
 
 var vile_thicket = L.marker([32.546813, -52.294922], {icon: cityDruid}).bindPopup('<a href="https://edmundgelting.github.io/the-wiki/2.-The-Races/4.-The-Venthalyr"><b> The Thicket - Venthalyri Satelite Forest</b>').addTo(map);
 var vile_smoke = L.marker([-4.740675, -72.246094], {icon: cityDwarves}).bindPopup('<a href="https://edmundgelting.github.io/the-wiki/2.-The-Races/3.-The-Markhalyr"><b> The Tower of Smoke - Markhalyri Stronghold </b>').addTo(map);
 
-L.control.scale({metric: false, maxWidth: 250}).addTo(map);
+L.control.scale({metric: true, maxWidth: 250}).addTo(map);
 
     </script>
   </body>
